--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rc-table",
-  "version": "5.2.7",
+  "version": "5.2.8-vst.0",
   "description": "table ui component for react",
   "keywords": [
     "react",
